@@ -10,7 +10,7 @@ export PYBUILD_NAME := lpbuildd
 export LIBDIR := $(shell python -c 'import distutils.sysconfig; print(distutils.sysconfig.get_python_lib())')
 
 %:
-	dh $@ --with=python2 --buildsystem=pybuild
+	dh $@ --with=python2,python3 --buildsystem=pybuild
 
 override_dh_auto_build:
 	dh_auto_build
