@@ -20,3 +20,17 @@ python-testtools
 python-twisted
 python-txfixtures
 python-zope.interface
+python3-apt
+python3-debian
+python3-fixtures
+python3-netaddr
+python3-pylxd
+python3-requests
+python3-responses
+python3-setuptools
+python3-six
+python3-systemfixtures
+python3-testtools
+python3-twisted
+python3-txfixtures
+python3-zope.interface
